Updated `Trade` model with `@NotNull` validation and implemented `TradeService` with `ServiceCRUDAble` interface, integrating `TradeRepository` for CRUD operations alongside error handling.